2005-09-03  Benoît Dejean  <benoit@placenet.org>

	* AUTHORS:
	* src/callbacks.c: (cb_about): Synced authors.

2005-09-02  Paolo Borelli  <pborelli@katamail.com>

	* src/load-graph.c: draw the graph with cairo (bug #315111).
	* AUTHORS: add myself.

2005-09-02  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Post release bump to 2.13.0
	Requires gtk+ > 2.8.

2005-08-22  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.11.92.

2005-08-11  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.c:
	* src/disks.c: (sort_bytes), (fsusage_stats),
	(get_icon_for_device), (add_disk), (cb_update_disks),
	(create_disk_view):
	* src/disks.h:
	* src/interface.c:

	Reworked the disk view and moved everything related in
	disks.[ch]. The new device list handling is much simpler and no
	longer hides duplicate mount points. The sort should also be a bit
	more stable.

2005-08-11  Benoît Dejean  <benoit@placenet.org>

	* src/prettytable.c: (pretty_table_get_icon):

	#if 0 debug message.

2005-08-09  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Post release bymp

	* src/callbacks.c: (cb_update_disks):

	Fixed devices list. Now uses mountdir as key instead of devname.
	With all_fs, many devices have the same devname (e.g. tmpfs).

2005-08-08  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.11.91.

2005-08-04  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:

	Post release version bump.

	* src/util.h:

	Fixed include guards.

2005-08-04  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (procinfo_new), (refresh_list):

	get_info -> procinfo_new.

2005-07-28  Abduxukur Abdurixit <abdurixit@gmail.com>

        * configure.in: Added "ug" to ALL_LINGUAS.

2005-07-25  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in:
	* src/callbacks.c: (cb_update_disks), (cb_timeout):
	* src/load-graph.c: (load_graph_update):

	Removed some debug messages.

	Released 2.11.90.
