@@ -1,3 +1,15 @@
+2005-09-04  Benoît Dejean  <benoit@placenet.org>
+
+	* src/infoview.c: (infoview_update):
+	* src/procman.h:
+	* src/proctable.c: (sort_ints), (proctable_new),
+	(get_process_memory_info), (update_info_mutable_cols),
+	(procinfo_new):
+	* src/proctable.h:
+
+	Removed the "Memory" and "RSS memory" columns. There are pretty
+	useless or misleading. Now we have RES, Shared, Virtual and X.
+
 2005-09-03  Benoît Dejean  <benoit@placenet.org>
 
 	* AUTHORS:
